--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch db.json",
-    "start-full": "json-server db.json --watch && cd doctomap && pnpm run dev-tail"
+    "api": "json-server --watch db.json",
+    "start": "nodemon index.js",
+    "react": "cd doctomap && pnpm run dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "json-server": "1.0.0-beta.1"
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "json-server": "1.0.0-beta.1",
+    "nodemon": "^3.1.4"
   }
 }
